<resources>
    <string name="app_name">Vlc Remote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vlc Media Stream</string>
    <string name="nav_header_subtitle">easy streaming@vlc.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_share">Share</string>

    <string name="menu_home">Home</string>
    <string name="menu_How_it_works">User Guide</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Contact_us">Contact us</string>
    <string name="menu_About">About</string>

    <string name="music"> Music</string>
    <string name="basic_control">Control</string>
    <string name="computer_files">Files</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="control">Control</string>
    <string name="files">Files</string>
    <string name="dark_mod">Dark Mode</string>
    <string name="change_lua_password">Change Lua Password\n <i>VLC http lua password</i></string>
    <string name="change_server_ip">Change Server Ip \n <i>The IP address in which the server is running</i></string>
    <string name="enable_volume_key_to_scroll">Enable Volume Key \n <i>Allow volume key to scroll down and up \n your computer content</i></string>
    <string name="basic_settings">Basic Settings</string>
    <string name="new_password">New Password</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="fullscreen">FullScreen</string>
    <string name="inorder">Inorder</string>
    <string name="disorder">DisOrder</string>
    <string name="change_pc_password">Change Pc Password \n <i>Your Computer Password for unlocking</i></string>
    <string name="screenshot">Screenshot</string>
    <string name="lock">Lock</string>
    <string name="unlock">UnLock</string>
    <string name="shutdown">Shutdown</string>
    <string name="restart">Restart</string>
    <string name="scrolldown">ScrollDown</string>
    <string name="scrollup">ScrollUp</string>
    <string name="connecting">Connecting....</string>
    <string name="connected">Connected</string>
    <string name="disConnected">Connecting...</string>
    <string name="change_the_serverport">Change The ServerPort \n <i>The port for both VLC and Jar Server</i></string>
    <string name="succeced">Succeced</string>
    <string name="them_description">Enable dark theme \n  <i> Switch\'s between dark and light theme</i></string>

</resources>