<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_usermanual"
            android:icon="@drawable/user_manual"
            android:title="@string/menu_How_it_works" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_Settings" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/contactus"
            android:title="@string/menu_Contact_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_About" />
    </group>
</menu>