<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/garamond"
        android:text="@string/connecting"
        android:textSize="30sp">
    </TextView>

    <TextView
        android:id="@+id/serverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/garamond"
        android:text=""
        android:layout_marginStart="5dp"
        android:textColor="@color/greenColor"
        android:textSize="16sp">

    </TextView>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </Space>

    <ImageButton
        android:id="@+id/restartConnection"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/garamond"
        android:src="@drawable/restart">
    </ImageButton>
</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="false">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lock"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableLeft="@drawable/lock"
            android:focusable="true"
            android:paddingLeft="15dp"
            android:text="@string/lock"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/unlock"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableStart="@drawable/unlock"
            android:focusable="true"
            android:paddingLeft="15dp"
            android:text="@string/unlock"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shutdown"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableLeft="@drawable/shutdown"
            android:focusable="true"
            android:paddingLeft="15dp"
            android:text="@string/shutdown"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restarter"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableLeft="@drawable/restart"
            android:focusable="true"
            android:paddingLeft="15dp"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scrolldown"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableLeft="@drawable/scrolldown"
            android:focusable="true"
            android:paddingLeft="15dp"
            android:text="@string/scrolldown"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scrollup"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableStart="@drawable/scrollup"
            android:focusable="true"
            android:paddingStart="15dp"
            android:text="@string/scrollup"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/screenshot"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:drawableLeft="@drawable/fullscreen"
            android:focusable="true"
            android:paddingLeft="15dp"
            android:text="@string/screenshot"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>